dodany kolor,tekst

--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>NEW TITLE</title>
+    <style>
+        body { background-color: lightgreen; }
+    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <ul>
+        <li>Opcja A</li>
+        <li>Opcja B</li>
+        <li>Opcja C</li>
+    </ul>
+
 </head>
 <body>
+tekst
+
+
 
 </body>
 </html>
