--- a/IdeaProjects/PierwszyHTML/index.html
+++ b/IdeaProjects/PierwszyHTML/index.html
@@ -2,13 +2,13 @@
 <head>
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="stylesheet" type="text/css" href="index.css">
-
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/index.css">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
   <title>NEW TITLE</title>
 
@@ -17,50 +17,45 @@
 </head>
 <body>
 
-<ul>
-  <li>HOME</li>
-  <li>BLOG</li>
-  <li>QUIZ</li>
-  <li class="nav-item">
-    <a class="nav-link active" href=kontakt.html>Kontakt</a>
-
-  <li class="nav-item">
-    <a class="nav-link active" href="#">Active</a>
-  </li>
-  <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-    <div class="dropdown-menu">
-      <a class="dropdown-item" href="#">Action</a>
-      <a class="dropdown-item" href="#">Another action</a>
-      <a class="dropdown-item" href="#">Something else here</a>
-      <div class="dropdown-divider"></div>
-      <a class="dropdown-item" href="#">Separated link</a>
-    </div>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-  </li>
-
-
-  <li class="nav-item">
-    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Home</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link active" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="true">Profile</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link active" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="true">Contact</a>
-  </li>
-</ul>
-<div class="tab-content" id="myTabContent">
-  <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">... HOME</div>
-  <div class="tab-pane fade show active" id="profile" role="tabpanel" aria-labelledby="profile-tab">... PROFILE</div>
-  <div class="tab-pane fade show active" id="contact" role="tabpanel" aria-labelledby="contact-tab">... CONTACT</div>
+<div class="navbar"></div>
+<div class="scroll">
+  <button class="btn btn-success">
+    <i class="fa fa-arrow-circle-up" aria-hidden="true"></i>Do gory
+  </button>
 </div>
+<span class="scroll.js"></span>
 
+
+<div class="container">
+  <div class="row justify-content-md-center">
+  <div class="col-12 col-sm-6 col-md-8">
+    Habitasse platea dictumst vestibulum rhoncus est. Dui nunc mattis enim ut tellus. Potenti nullam ac tortor vitae purus faucibus ornare suspendisse sed. Gravida rutrum quisque non tellus orci ac auctor. Semper eget duis at tellus. Id venenatis a condimentum vitae sapien pellentesque. Vel quam elementum pulvinar etiam non. Tristique sollicitudin nibh sit amet commodo nulla facilisi nullam. Varius morbi enim nunc faucibus a. Amet venenatis urna cursus eget nunc. Diam phasellus vestibulum lorem sed risus ultricies tristique nulla aliquet. Mattis rhoncus urna neque viverra. Augue neque gravida in fermentum et sollicitudin ac orci phasellus. Nulla facilisi cras fermentum odio eu. Nunc sed id semper risus in hendrerit gravida rutrum.
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mattis enim ut tellus elementum sagittis vitae et. Adipiscing commodo elit at imperdiet dui accumsan sit amet. Tincidunt lobortis feugiat vivamus at augue eget. Integer quis auctor elit sed vulputate. Cursus eget nunc scelerisque viverra. Quis lectus nulla at volutpat diam. Justo nec ultrices dui sapien eget. Tempus iaculis urna id volutpat. Eleifend quam adipiscing vitae proin sagittis nisl rhoncus mattis. Gravida quis blandit turpis cursus in hac habitasse platea. Sit amet justo donec enim diam vulputate ut. Et ligula ullamcorper malesuada proin libero nunc consequat. Enim tortor at auctor urna nunc id. Purus viverra accumsan in nisl nisi scelerisque eu ultrices vitae. Neque ornare aenean euismod elementum nisi. Et malesuada fames ac turpis egestas maecenas. Dui faucibus in ornare quam viverra.
+    Habitasse platea dictumst vestibulum rhoncus est. Nunc congue nisi vitae suscipit. Feugiat pretium nibh ipsum consequat nisl vel pretium lectus quam. Pellentesque elit ullamcorper dignissim cras tincidunt lobortis feugiat vivamus at. Morbi tristique senectus et netus et malesuada fames. Varius sit amet mattis vulputate enim nulla aliquet porttitor lacus. Venenatis urna cursus eget nunc scelerisque viverra mauris in aliquam. Tempus imperdiet nulla malesuada pellentesque elit eget gravida cum sociis. Arcu odio ut sem nulla pharetra diam sit amet nisl. Habitant morbi tristique senectus et netus et. Eu ultrices vitae auctor eu augue ut lectus arcu. Faucibus nisl tincidunt eget nullam. A scelerisque purus semper eget duis at tellus at. Ligula ullamcorper malesuada proin libero nunc consequat. Eu augue ut lectus arcu bibendum at varius vel pharetra. Tristique magna sit amet purus gravida quis blandit. Purus sit amet luctus venenatis lectus magna. Enim ut sem viverra aliquet.
+    Ornare lectus sit amet est placerat in. Aliquam nulla facilisi cras fermentum odio eu. Donec ac odio tempor orci dapibus ultrices in.Imperdiet nulla malesuada pellentesque elit eget gravida cum sociis natoque. Proin libero nunc consequat interdum varius. Ante in nibh mauris cursus mattis molestie a iaculis at. Morbi enim nunc faucibus a pellentesque sit. Bibendum at varius vel pharetra vel turpis. Porta lorem mollis aliquam ut porttitor leo. Justo laoreet sit amet cursus sit amet dictum sit amet. Est sit amet facilisis magna. Orci a scelerisque purus semper eget duis at. Nulla facilisi cras fermentum odio eu feugiat pretium nibh. Pellentesque id nibh tortor id. Sed vulputate odio ut enim blandit volutpat maecenas. Elit pellentesque habitant morbi tristique senectus et. Amet luctus venenatis lectus magna fringilla urna porttitor rhoncus.
+    Volutpat blandit aliquam etiam erat velit scelerisque in. Egestas egestas fringilla phasellus faucibus scelerisque. Amet mattis vulputate enim nulla. Nec dui nunc mattis enim ut tellus elementum sagittis. Condimentum id venenatis a condimentum vitae sapien. Lacinia at quis risus sed vulputate odio ut enim. Eget aliquet nibh praesent tristique magna sit amet. Nulla malesuada pellentesque elit eget gravida cum sociis natoque penatibus. Et netus et malesuada fames ac turpis. Habitasse platea dictumst vestibulum rhoncus est. Nisl vel pretium lectus quam. Tellus in hac habitasse platea. Faucibus purus in massa tempor nec feugiat. At elementum eu facilisis sed odio morbi quis commodo odio. Eget nunc lobortis mattis aliquam faucibus. Quam viverra orci sagittis eu. Odio morbi quis commodo odio aenean sed adipiscing diam donec. Morbi tempus iaculis urna id volutpat lacus laoreet non curabitur. Nunc sed velit dignissim sodales ut eu sem integer. Leo urna molestie at elementum eu facilisis sed
+    Habitasse platea dictumst vestibulum rhoncus est. Dui nunc mattis enim ut tellus. Potenti nullam ac tortor vitae purus faucibus ornare suspendisse sed. Gravida rutrum quisque non tellus orci ac auctor. Semper eget duis at tellus. Id venenatis a condimentum vitae sapien pellentesque. Vel quam elementum pulvinar etiam non. Tristique sollicitudin nibh sit amet commodo nulla facilisi nullam. Varius morbi enim nunc faucibus a. Amet venenatis urna cursus eget nunc. Diam phasellus vestibulum lorem sed risus ultricies tristique nulla aliquet. Mattis rhoncus urna neque viverra. Augue neque gravida in fermentum et sollicitudin ac orci phasellus. Nulla facilisi cras fermentum odio eu. Nunc sed id semper risus in hendrerit gravida rutrum.
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mattis enim ut tellus elementum sagittis vitae et. Adipiscing commodo elit at imperdiet dui accumsan sit amet. Tincidunt lobortis feugiat vivamus at augue eget. Integer quis auctor elit sed vulputate. Cursus eget nunc scelerisque viverra. Quis lectus nulla at volutpat diam. Justo nec ultrices dui sapien eget. Tempus iaculis urna id volutpat. Eleifend quam adipiscing vitae proin sagittis nisl rhoncus mattis. Gravida quis blandit turpis cursus in hac habitasse platea. Sit amet justo donec enim diam vulputate ut. Et ligula ullamcorper malesuada proin libero nunc consequat. Enim tortor at auctor urna nunc id. Purus viverra accumsan in nisl nisi scelerisque eu ultrices vitae. Neque ornare aenean euismod elementum nisi. Et malesuada fames ac turpis egestas maecenas. Dui faucibus in ornare quam viverra. Habitasse platea dictumst vestibulum rhoncus est. Nunc congue nisi vitaesuscipit. Feugiat pretium nibh ipsum consequat nisl vel pretium lectus quam. Pellentesque elit ullamcorper dignissim cras tincidunt
+    lobortis feugiat vivamus at. Morbi tristique senectus et netus et malesuada fames. Varius sit amet mattis vulputate enim nulla aliquet porttitor lacus. Venenatis urna cursus eget nunc scelerisque viverra mauris in aliquam. Tempus imperdiet nulla malesuada pellentesque elit eget gravida cum sociis. Arcu odio ut sem nulla pharetra diam sit amet nisl. Habitant morbi tristique senectus et netus et. Eu ultrices vitae auctor eu augue ut lectus arcu. Faucibus nisl tincidunt eget nullam. A scelerisque purus semper eget duis at tellus at. Ligula ullamcorper malesuada proin libero nunc consequat. Eu augue ut lectus arcu bibendum at varius vel pharetra. Tristique magna sit amet purus gravida quis blandit. Purus sit amet luctus venenatis lectus magna. Enim ut sem viverra aliquet.Ornare lectus sit amet est placerat in. Aliquam nulla facilisi cras fermentum odio eu. Donec ac odio tempor orci dapibus ultrices in. Imperdiet nulla
+    malesuada pellentesque elit eget gravida cum sociis natoque. Proin libero nunc consequat interdum varius. Ante in nibh mauris cursus mattis molestie a iaculis at. Morbi enim nunc faucibus a pellentesque sit. Bibendum at varius vel pharetra vel turpis. Porta lorem mollis aliquam ut porttitor leo. Justo laoreet sit amet cursus sit amet dictum sit amet. Est sit amet facilisis magna. Orci a scelerisque purus semper eget duis at. Nulla facilisi cras fermentum odio eu feugiat pretium nibh. Pellentesque id nibh tortor id. Sed vulputate odio ut enim blandit volutpat maecenas. Elit pellentesque habitant morbi tristique senectus et. Amet luctus venenatis lectus magna fringilla urna porttitor rhoncus
+    Volutpat blandit aliquam etiam erat velit scelerisque in. Egestas egestas fringilla phasellus faucibus scelerisque. Amet mattis vulputate enim nulla.Nec dui nunc mattis enim ut tellus elementum sagittis. Condimentum id venenatis a condimentum vitae sapien. Lacinia at quis risus sed vulputate odiout enim. Eget aliquet nibh praesent tristique magna sit amet. Nulla malesuada pellentesque elit eget gravida cum sociis natoque penatibus. Et netus et
+    malesuada fames ac turpis. Habitasse platea dictumst vestibulum rhoncus est. Nisl vel pretium lectus quam. Tellus in hac habitasse platea. Faucibuspurus in massa tempor nec feugiat. At elementum eu facilisis sed odio morbi quis commodo odio. Eget nunc lobortis mattis aliquam faucibus. Quam viverra orci sagittis eu. Odio morbi quis commodo odi
+    o aenean sed adipiscing diam donec. Morbi tempus iaculis urna id volutpat lacus laoreet non curabitur. Nunc sed velit dignissim sodales ut eu sem integer. Leo urna molestie at elementum eu facilisis
+      sed
+  </div>
+  </div>
+  </div>
+
+
+
+<le>
+  <div>
+    <span>Copyrights &copy; Michal Lenart | 2019</span>
+  </div>
+</le>
+
+<script src="js/navbar.js"></script>
+  <script src="js/scroll.js"></script>
 </body>
 </html>
 
